--- a/MonomgcbTest/MonomgcbTest/MonomgcbTest.csproj
+++ b/MonomgcbTest/MonomgcbTest/MonomgcbTest.csproj
@@ -39,6 +39,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Game1.cs" />
+    <Compile Include="InputEngine.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
